# fastapi-labs

./: .gitignore  pyproject.toml
fastapi_labs/: __init__.py  app.py
tests/: __init__.py
tests/fastapi_labs/: test_app.py
