[project]
name = "fastapi-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "Marilzon",email = "maxmaril@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
ruff = "^0.11.9"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]
